derive_builder/tests/compile-fail/vis_conflict.stderr
error: this visibility conflicts with a `public` specified earlier
 --> tests/compile-fail/vis_conflict.rs:5:19
  |
5 | #[builder(public, vis = "pub(crate)")]
  |                   ^^^^^^^^^^^^^^^^^^

error: this visibility conflicts with a `public` specified earlier
 --> tests/compile-fail/vis_conflict.rs:7:23
  |
7 |     #[builder(public, private)]
  |                       ^^^^^^^

error: this visibility conflicts with a `public` specified earlier
  --> tests/compile-fail/vis_conflict.rs:12:19
   |
12 | #[builder(public, vis = "pub(crate)", build_fn(private, public))]
   |                   ^^^^^^^^^^^^^^^^^^

error: this visibility conflicts with a `private` specified earlier
  --> tests/compile-fail/vis_conflict.rs:12:57
   |
12 | #[builder(public, vis = "pub(crate)", build_fn(private, public))]
   |                                                         ^^^^^^

error: this visibility conflicts with a `private` specified earlier
  --> tests/compile-fail/vis_conflict.rs:14:24
   |
14 |     #[builder(private, vis = "pub")]
   |                        ^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `ExampleBuilder`
  --> tests/compile-fail/vis_conflict.rs:19:5
   |
19 |     ExampleBuilder::default().build();
   |     ^^^^^^^^^^^^^^ use of undeclared type `ExampleBuilder`

error[E0433]: failed to resolve: use of undeclared type `SecondExampleBuilder`
  --> tests/compile-fail/vis_conflict.rs:20:5
   |
20 |     SecondExampleBuilder::default().build();
   |     ^^^^^^^^^^^^^^^^^^^^ use of undeclared type `SecondExampleBuilder`
